First compilable with JDK23 port.